--- a/HW0.ipynb
+++ b/HW0.ipynb
@@ -23,10 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, World!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Running this text without commenting it out will give an error"
+    "# Running this text without commenting it out will give an error"
    ]
   },
   {
@@ -53,10 +63,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ESDA'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course = \"ESDA\"\n",
+    "\n",
+    "course"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +92,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "y = 12\n",
+    "\n",
+    "z = x + y\n",
+    "z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"CEE-690-02\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'E'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"ESDA\"[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ig d'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Big data\"[1:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +204,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'classroom'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"CLASSROOM\".lower()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,11 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At least one of the statements is true\n"
+     ]
+    }
+   ],
    "source": [
-    "if (5 == 10) OPR (4 == 4):\n",
+    "if (5 == 10) or (4 == 4):\n",
     "    print(\"At least one of the statements is true\")"
    ]
   },
@@ -154,11 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car\n",
+      "bus\n"
+     ]
+    }
+   ],
    "source": [
-    "vehicles = ['car','truck','bus']"
+    "vehicles = ['car','truck','bus']\n",
+    "\n",
+    "print(vehicles[0])\n",
+    "print(vehicles[-1])"
    ]
   },
   {
@@ -170,10 +284,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['car', 'truck', 'motorcycle']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vehicles[-1] = \"motorcycle\"\n",
+    "\n",
+    "vehicles"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,10 +313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['car', 'truck', 'motorcycle', 'bicycle']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vehicles.append('bicycle')\n",
+    "\n",
+    "vehicles"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,16 +342,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Environmental Spatial Data Analysis'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "course= {\n",
     "    \"name\":\"Environmental Spatial Data Analysis\",\n",
     "    \"id\":\"CEE690-02\",\n",
     "    \"semester\":\"Fall\",\n",
     "    \"year\":2020\n",
-    "}"
+    "}\n",
+    "\n",
+    "course[\"name\"]"
    ]
   },
   {
@@ -219,10 +376,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Environmental Spatial Data Analysis',\n",
+       " 'id': 'CEE690-02',\n",
+       " 'semester': 'Fall',\n",
+       " 'year': 2021}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course[\"year\"] = 2021\n",
+    "\n",
+    "course"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -233,10 +408,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Environmental Spatial Data Analysis',\n",
+       " 'id': 'CEE690-02',\n",
+       " 'semester': 'Fall',\n",
+       " 'year': 2021,\n",
+       " 'grade': 'A'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course[\"grade\"] = \"A\"\n",
+    "\n",
+    "course"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,10 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course.clear()\n",
+    "\n",
+    "course"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,10 +470,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make1 and make2 or make3 and make4 are the same\n"
+     ]
+    }
+   ],
+   "source": [
+    "make1 = \"Toyota\"\n",
+    "make2 = \"Mercedes\"\n",
+    "make3 = \"Ford\"\n",
+    "make4 = \"Ford\"\n",
+    "\n",
+    "if make1 == make2 or make3 == make4:\n",
+    "    print(\"make1 and make2 or make3 and make4 are the same\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,10 +500,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,10 +534,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,11 +565,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car\n",
+      "bus\n",
+      "motorcycle\n"
+     ]
+    }
+   ],
    "source": [
-    "vehicles = [\"car\",\"bus\",\"motorcycle\"]"
+    "vehicles = [\"car\",\"bus\",\"motorcycle\"]\n",
+    "\n",
+    "for i in vehicles:\n",
+    "    print(i)"
    ]
   },
   {
@@ -319,10 +594,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in vehicles:\n",
+    "    if i == \"bus\":\n",
+    "        break\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,10 +621,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,10 +655,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello_world():\n",
+    "    print(\"Hello, World!\")\n",
+    "\n",
+    "hello_world()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -361,10 +682,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def many_hello_worlds(n):\n",
+    "    for i in range(n):\n",
+    "        print(\"Hello, World!\")\n",
+    "\n",
+    "many_hello_worlds(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -375,15 +712,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonnaci():\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(2, 12):\n",
+    "        c = a + b\n",
+    "        print(c)\n",
+    "        a, b = b, c\n",
+    "\n",
+    "fibonnaci()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -397,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
